crates/unleash-api-client-macros/tests/ui/fail/wrong_form.rs
use unleash_api_client_macros::FeatureKey;

trait FeatureKey: Copy + core::fmt::Debug + 'static {
    fn name(self) -> &'static str;
}

#[derive(Copy, Clone, Debug, FeatureKey)]
enum Features {
    #[feature_name = "a"]
    FeatureA,
}

fn main() {}