crates/unleash-api-client-macros/tests/ui/fail/wrong_form.stderr
error: expected #[feature_name("…")]
 --> tests/ui/fail/wrong_form.rs:9:5
  |
9 |     #[feature_name = "a"]
  |     ^
